--- a/Exercise 5/U2220457J_Exercise5.ipynb
+++ b/Exercise 5/U2220457J_Exercise5.ipynb
@@ -734,6 +734,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainDF = pd.concat([saleprice_train,centralair_train], axis = 1).reindex(saleprice_train.index)\n",
+    "f = plt.figure(figsize=(18, 6))\n",
+    "sb.swarmplot(x = \"SalePrice\", y = \"CentralAir\", data = trainDF, orient = \"h\", s = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 400,
    "metadata": {},
    "outputs": [
